Use url for HTTP parameters not form data

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
         "scenes.ts",
         "controllers/*.ts",
         "inputs/*.ts",
-        "webServer.ts",
+        "webServer.ts", "inputs/http/http.ts",
     ]
 }
