Add effect support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,13 @@
     "include": [
         "controller.ts",
         "types/*.ts",
+        "effects/*.ts",
         "configFile.ts",
         "config.ts",
         "scenes.ts",
         "groups.ts",
         "logger.ts",
         "index.ts",
-        "scenes.ts",
         "controllers/*.ts",
         "inputs/*.ts",
         "webServer.ts", "inputs/http/http.ts",
